--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 <table>
 <td><img src="look.png"></img></br></td>
 <td>
-메소 소량 받고 홍보멘트 달아드립니다.</br>
-HTML 디자인좀 해주실분 구함</br>
-<s>사실 내가 해도 되는데 엄청 귀찮음</s>
+2016년에 만든 페이지이어서 질문 다틀릴수도있음</br>
+하지만 뭐 어쩌겠음..</br>
+2016년에도 2014년 질문 정리글거 긁어서 대충 추가한거같음....</br>
 	</div></td>
 </table>
 <script src="123.js"></script>
