--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<h1>메이플 빠른OX족보 Beta</h1>
 	<h4>by 바람마음설냥 in 스카니아</br>
-	문의는 yukinyaa712@gmail.com 혹은 초메/귓말</h4>
+	문의는 <a href="https://open.kakao.com/me/yukinyaa">오픈챗</a> 혹은 초메/귓말</h4>
 
 	
 
